A few fixes on small things I noticed that were off

--- a/stylesheets/css/screencat.css
+++ b/stylesheets/css/screencat.css
@@ -51,7 +51,7 @@ input[type="password"] {
     border: 1px solid #539be2; }
 
 .main-header {
-  background: linear-gradient(top, #FFFFFF 0%, #F2F2F2 100%);
+  background: -webkit-linear-gradient(top, #FFFFFF 0%, #F2F2F2 100%);
   border-bottom: 1px solid #D3D3D3;
   box-shadow: 0 1px 2px rgba(235, 235, 235, 0.8); }
 
